# firewall-packet-classification-using-decision-trees

./: .gitignore  Makerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml
src/firewall_ml/: config.py  data.py  evaluate.py  model_zoo.py  pipline.py  train.py
tests/: test_smoke.py
