[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]

[tool.pytest.ini_options]
addopts = "-q --no-header --color=yes"

[tool.mypy]
ignore_missing_imports = true
strict = false
